# VPTQ

./: .pre-commit-config.yaml  pyproject.toml  run_build.sh  setup.py  test.py  test.sh
cmake/: generic.cmake
csrc/: CMakeLists.txt  common.h  dequant.cu  dequant_impl_packed.cu  ops.cc  quant_gemv.cu  quant_gemv.cuh  quant_gemv_v2.cu  quantized_gemm.cuh  utils.cuh
csrc/kernels/: decode.cuh  quant_gemv_traits.cuh  quant_gemv_v2.cuh
csrc/kernels/copy/: copy_traits.cuh  mod.cuh  warp.cuh
csrc/tests/: run.sh  test.py
csrc/util/: common.h  cuda_info.cc  cuda_info.hpp
tests/: infer.py  run.sh  test.py  test_generation.py  test_quant_gemv.py
tests/ops/: run.sh  test_gemm.py  test_quant_gemm.py
vptq/layers/: model_base.py  utils.py  vqlinear.py
vptq/ops/: dequant.py  fused_gemm.py  gemm.py  quant_gemm.py
vptq/tests/ops/: test_quant_gemv.py
